# Thesis-repo

./: .gitignore  AGENT_SETUP_RUNBOOK.md  PARTNER_SETUP.md  README.md  data_loader.py  environment.yml  htb_metrics.py  pyproject.toml  thesis_eval.py  thesis_style.py
data/cache/: README.md  norway_raw_features.csv
data/raw/: README.md
docs/reproducibility/: README.md  colmanifest_266_macos_arm64.tsv
figures/: fig_app_data_coverage.txt  fig_app_pca_variance.txt  fig_app_selected_complexity.txt  fig_ch8_blockcv_vs_wf.txt  fig_ch8_tau_by_regime.txt  fig_is_overfit_gap.txt  fig_is_relevance.txt  fig_oos_dmh_h63.txt  fig_oos_r2_horizon.txt  fig_oos_r2_regime_heatmap.txt  fig_oos_survivor_funnel.txt  fig_oos_tau_heatmap.txt
htboost_results_v3/: universe_freeze.json
notebooks/: 01_build_dataset.ipynb  model_catboost_pooled_v5.ipynb  model_catboost_v5_clean.ipynb  model_htboost_pooled_v5.ipynb  model_htboost_v5_clean.ipynb  model_htboost_v5_clean_michelle_L2.ipynb  model_linear_v5_clean.ipynb  model_mean_reversion.ipynb  model_momentum.ipynb  model_xgboost_pooled_v5.ipynb  model_xgboost_v5_clean.ipynb  results_consolidation.ipynb
results/: MANIFEST.md
results/audit/: blockcv_loro_audit.md
results/catboost_pooled_v5/: cat_pooled_eval_H126__Bob.csv  cat_pooled_eval_H1__Bob.csv  cat_pooled_eval_H21__Bob.csv  cat_pooled_eval_H252__Bob.csv  cat_pooled_eval_H5__Bob.csv  cat_pooled_eval_H63__Bob.csv  (+25 more)
scratchpad/: gate1_two_arm_probe.py
scripts/: model_xgboost_v5_clean.py  run_handshake.py  setup_htboost.py  setup_machine.ps1  setup_machine.sh
src/: __init__.py  config.py
tables/: fill_values.csv
(+352 files in other folders)
